# dotctl

./: .gitignore  README.md  pyproject.toml
.github/runner/: .env  Dockerfile  docker-compose.yml
.github/runner/scripts/: start.sh
.github/workflows/: ci.yaml  cicd.yaml  publish.yaml
src/.archive/dotctl/: arg_manager.py  confs.py  exception.py  handlers.py
src/.archive/dotctl/actions/: __init__.py  apply.py  import_p.py  list.py  remove.py  save.py  wipe.py
src/.archive/dotctl/templates/: kde.yml
src/dotctl/: __init__.py  arg_manager.py  confs.py  exception.py  main.py  paths.py  utils.py  validators.py
src/dotctl/actions/: Initializer.py  activator.py  creator.py  export.py  exporter.py  initializer.py  lister.py  remover.py  saver.py  switcher.py
src/dotctl/handlers/: Initializer.py  config_handler.py  data_handler.py  git_handler.py  hooks_handler.py
src/dotctl/hooks/: pre_apply.sh
src/dotctl_alpha/: arg_manager.py  exception.py  paths.py
src/plasmasaver/: plasmasaver.py
