[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotctl"
version = "x.x.x"
authors = [
  { name = "Pankaj Jackson", email = "pankajackson@live.co.uk" }
]
description = "A powerful CLI tool to profile your OS by saving, applying, exporting, and importing system configurations as named profiles. Designed to manage dot files and service configurations in a centralized Git repository (local or remote), dotctl enables seamless system replication across machines. Supports pre/post hook scripts, making it ideal for setting up servers or desktops with consistent environments."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.10"
dependencies = [
  "PyYAML",
  "gitpython"
]

[tool.setuptools.package-data]
"dotctl" = ["templates/*.yaml", "hooks/*.sh"]

keywords = [
  "dotfiles",
  "config",
  "settings",
  "backup",
  "dotfile-manager"
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities"
]

[project.scripts]
dotctl = "dotctl.main:main"

[project.urls]
Homepage = "https://github.com/pankajackson/dotctl"
"Bug Tracker" = "https://github.com/pankajackson/dotctl/issues"
Source = "https://github.com/pankajackson/dotctl"
